add bootstrap for views has a first learning of bootstrap

--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -1,1 +1,46 @@
-hello worlds
+<!doctype html>
+<html>
+<head>
+	<meta charset="utf-8">
+    	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+   	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+	<link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
+	<title>Townlet</title>
+</head>
+<body>
+	<style type="text/css">
+		#header{
+			background: #eee;
+			display: block;
+			margin-right: auto;
+			margin-left: auto;
+		}
+	</style>
+	
+	<div class="container-fluid">
+		<h3 id="header" class="text-center">Townlet</h3>
+  		<!-- Stack the columns on mobile by making one full-width and the other half-width -->
+	<!-- Stack the columns on mobile by making one full-width and the other half-width -->
+		<div class="row">
+		  	<div class="col-xs-12 col-md-8">.col-xs-12 .col-md-8</div>
+		  	<div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+		</div>
+
+		<!-- Columns start at 50% wide on mobile and bump up to 33.3% wide on desktop -->
+		<div class="row">
+			  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+			  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+			  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+		</div>
+
+		<!-- Columns are always 50% wide, on mobile and desktop -->
+		<div class="row">
+			  <div class="col-xs-6">.col-xs-6</div>
+			  <div class="col-xs-6">.col-xs-6</div>
+	</div>
+	<script src="/static/js/jquery-2.1.3.min.js"></script>
+	<script src="/static/js/bootstrap.min.js"></script>
+
+</body>
+</html>
