--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -10,35 +10,27 @@
 </head>
 <body>
 	<style type="text/css">
-		#header{
+		#chat-window{
 			background: #eee;
 			display: block;
+			width: 90%;
 			margin-right: auto;
 			margin-left: auto;
 		}
 	</style>
-	
-	<div class="container-fluid">
-		<h3 id="header" class="text-center">Townlet</h3>
-  		<!-- Stack the columns on mobile by making one full-width and the other half-width -->
-	<!-- Stack the columns on mobile by making one full-width and the other half-width -->
+	<div class="container-fluid" id="chat-window">
 		<div class="row">
-		  	<div class="col-xs-12 col-md-8">.col-xs-12 .col-md-8</div>
-		  	<div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
+			<div class="col-xs-6 text-center">
+				123
+			</div>
+			<div class="col-xs-6">
+				123
+			</div>
 		</div>
-
-		<!-- Columns start at 50% wide on mobile and bump up to 33.3% wide on desktop -->
-		<div class="row">
-			  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
-			  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
-			  <div class="col-xs-6 col-md-4">.col-xs-6 .col-md-4</div>
-		</div>
-
-		<!-- Columns are always 50% wide, on mobile and desktop -->
-		<div class="row">
-			  <div class="col-xs-6">.col-xs-6</div>
-			  <div class="col-xs-6">.col-xs-6</div>
+		
 	</div>
+	
+		
 	<script src="/static/js/jquery-2.1.3.min.js"></script>
 	<script src="/static/js/bootstrap.min.js"></script>
 
